@@ -7,7 +7,8 @@
 #
 #	logfile			<file>
 #	debug-level		<level>
-#	threads			<#threads to use>
+#	threads			<initial #threads to use>
+#	max-threads		<maximum #threads to use>
 #	server-user             <user to run server as instead of root>
 #		server-user is ignored if nscd is started with -S parameters
 #       stat-user               <user who is allowed to request statistics>
@@ -29,6 +30,7 @@
 
 #	logfile			/var/log/nscd.log
 #	threads			6
+#	max-threads		128
 #	server-user		nobody
 #	stat-user		somebody
 	debug-level		0
